--- a/city-pollution-levels/src/style.css
+++ b/city-pollution-levels/src/style.css
@@ -7,6 +7,11 @@
     box-sizing: border-box;
 }
 
+html
+{
+    font-size: 10px;
+}
+
 body
 {
     background-color: #111;
@@ -14,3 +19,51 @@ body
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+header
+{
+    width: 100%;
+    padding: 1.5rem;
+    text-align: center;
+}
+
+header h1
+{
+    font-size: 3rem;
+}
+
+form.coords
+{
+    padding: 1.5rem;
+    display: grid;
+    width: max-content;
+    margin: 0 auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    align-content: center;
+    justify-content: center;
+    row-gap: 1rem;
+}
+
+form.coords label
+{
+    font-size: 1.8rem;
+    grid-row: 1 / 2;
+}
+
+form.coords button[type="reset"]
+{
+    grid-column: 1 / -1;
+    width: 50%;
+    justify-self: center;
+    color: red;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+form.coords input
+{
+    padding: .3em;
+    font-size: 1.3rem;
+    max-width: 100px;
+}
