--- a/city-pollution-levels/src/style.css
+++ b/city-pollution-levels/src/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Iceberg&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
+
 *,
 *::before,
 *::after
@@ -10,13 +13,13 @@
 html
 {
     font-size: 10px;
+    font-family: 'Rubik', sans-serif;
 }
 
 body
 {
     background-color: #111;
     color: #eee;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header
@@ -28,42 +31,98 @@ header
 
 header h1
 {
-    font-size: 3rem;
+    font-size: 4rem;
+    font-weight: 400;
+    letter-spacing: 0.3rem;
+    text-transform: uppercase;
+    margin-bottom: 2rem;
+    font-family: 'Iceberg', cursive;
+}
+
+.filter-forms
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(max-content, 20vw));
+    place-content: center;
+    padding: 1.5rem;
+    gap: 2rem;
 }
 
 form
 {
-    padding: 1.5rem;
     display: grid;
     width: max-content;
-    margin: 0 auto;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     align-content: center;
     justify-content: center;
-    row-gap: 1rem;
+    align-items: center;
+    row-gap: 0.5rem;
     font-size: 1.6rem;
+    width: 100%;
 }
 
-form input[type="text"]
+form :where(input[type="text"], input[type="search"])
 {
-    padding: .3em;
-    font-size: 1.3rem;
+    padding: 0.8em;
+    outline: none;
+    font-size: 1.4rem;
+    border: 2px solid #777;
+    background: transparent;
+    border-radius: 0.5rem;
+    color: inherit;
+    transition: border-color 0.3s ease;
+}
+
+form :where(input[type="text"], input[type="search"]):focus
+{
+    border-color: #003cff;
+}
+
+form.search-by-coords .coords-input
+{
+    grid-column: 1 / -1;
+    border: 2px solid #777;
+    border-radius: 0.5rem;
+    padding-right: 0.8rem;
+    transition: border-color 0.3s ease;
+}
+
+form.search-by-coords .coords-input:focus-within
+{
+    border-color: #003cff;
+}
+
+form.search-by-coords input
+{
     max-width: 100px;
+    border: none;
 }
 
 form.search-by-coords label
 {
-    grid-row: 1 / 2;
+    justify-self: start;
 }
 
 form.search-by-coords button[type="reset"]
 {
     grid-column: 1 / -1;
-    width: 50%;
+    width: max-content;
     justify-self: center;
-    color: red;
+    color: #ff5252;
     background: none;
     border: none;
     cursor: pointer;
+    font-size: 2rem;
+    font-family: monospace;
+}
+
+form.search-by-city
+{
+    grid-template-columns: 1fr;
+}
+
+form.search-by-city label
+{
+    justify-self: start;
 }
