--- a/city-pollution-levels/src/css/style.css
+++ b/city-pollution-levels/src/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Iceberg&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap');
 
 *,
 *::before,
@@ -13,7 +13,8 @@
 html
 {
     font-size: 10px;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
 body
@@ -128,4 +129,81 @@ form.search-by-city
 form.search-by-city label
 {
     justify-self: start;
+}
+
+main
+{
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.station-report-container
+{
+    background-color: #1a1a1a;
+    width: 100%;
+    padding: 2rem;
+    font-size: 1.5rem;
+    border-radius: 1rem;
+}
+
+.station-name
+{
+    font-size: 2.5rem;
+    font-weight: 400;
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.aqi-display
+{
+    display: flex;
+    padding: 2rem 4rem;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.5rem;
+    border-left: 0.5rem solid;
+    background-color: #252525;
+    flex-direction: column;
+    gap: 1rem;
+    width: max-content;
+    font-weight: 400;
+    margin-bottom: 2.5rem;
+}
+
+.aqi-display *
+{
+    cursor: default;
+}
+
+.aqi-level
+{
+    font-weight: 500;
+}
+
+.aqi-field
+{
+    font-weight: 300;
+}
+
+.pollutants-grid
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 1.5rem;
+    align-content: center;
+}
+
+.pollutant-card
+{
+    padding: 2rem;
+    background-color: #252525;
+    border-radius: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pollutant-name
+{
+    font-weight: 400;
 }
