Fixed pollutant cards and completed search feature

--- a/city-pollution-levels/src/css/style.css
+++ b/city-pollution-levels/src/css/style.css
@@ -126,6 +126,11 @@ form.search-by-city
     grid-template-columns: 1fr;
 }
 
+form.search-by-city input
+{
+    scroll-padding-right: 3rem;
+}
+
 form.search-by-city label
 {
     justify-self: start;
@@ -136,6 +141,16 @@ main
     max-width: 950px;
     margin: 0 auto;
     padding: 0 2rem;
+}
+
+.error-message
+{
+    color: red;
+    font-size: 3rem;
+    background-color: #1a1a1a;
+    text-align: center;
+    padding: 2rem;
+    border-radius: 1rem;
 }
 
 .station-report-container
@@ -149,7 +164,7 @@ main
 
 .station-name
 {
-    font-size: 2.5rem;
+    font-size: 3rem;
     font-weight: 400;
     margin-bottom: 2rem;
     text-align: center;
