--- a/city-pollution-levels/src/css/style.css
+++ b/city-pollution-levels/src/css/style.css
@@ -14,13 +14,14 @@ html
 {
     font-size: 10px;
     font-family: 'Roboto', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 body
 {
     background-color: #111;
     color: #eee;
+    padding-bottom: 2rem;
 }
 
 header
@@ -42,9 +43,10 @@ header h1
 
 .filter-forms
 {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(max-content, 20vw));
-    place-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     padding: 1.5rem;
     gap: 2rem;
 }
@@ -52,7 +54,7 @@ header h1
 form
 {
     display: grid;
-    width: max-content;
+    width: min(250px, 100vw);
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     align-content: center;
@@ -60,7 +62,6 @@ form
     align-items: center;
     row-gap: 0.5rem;
     font-size: 1.6rem;
-    width: 100%;
 }
 
 form :where(input[type="text"], input[type="search"])
@@ -166,24 +167,45 @@ main
 {
     font-size: 3rem;
     font-weight: 400;
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
     text-align: center;
 }
 
-.aqi-display
+.overview
 {
     display: flex;
-    padding: 2rem 4rem;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.overview .card
+{
+    display: flex;
+    height: 8rem;
+    padding: 2rem 0;
     align-items: center;
     justify-content: center;
     border-radius: 0.5rem;
-    border-left: 0.5rem solid;
     background-color: #252525;
     flex-direction: column;
     gap: 1rem;
     width: max-content;
     font-weight: 400;
     margin-bottom: 2.5rem;
+    width: 200px;
+}
+
+.overview .card .value
+{
+    font-weight: 300;
+    color: #ccc;
+}
+
+.aqi-display
+{
+    border-left: 0.5rem solid;
 }
 
 .aqi-display *
@@ -198,7 +220,7 @@ main
 
 .aqi-field
 {
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .pollutants-grid
@@ -222,4 +244,9 @@ main
 .pollutant-name
 {
     font-weight: 400;
+}
+
+.pollutant-value
+{
+    color: #ccc;
 }
