--- a/city-pollution-levels/src/css/style.css
+++ b/city-pollution-levels/src/css/style.css
@@ -184,7 +184,7 @@ main
 {
     display: flex;
     height: 8rem;
-    padding: 2rem 0;
+    padding: 2rem;
     align-items: center;
     justify-content: center;
     border-radius: 0.5rem;
@@ -194,7 +194,7 @@ main
     width: max-content;
     font-weight: 400;
     margin-bottom: 2.5rem;
-    width: 200px;
+    width: min(max-content, 250px);
 }
 
 .overview .card .value
@@ -206,6 +206,7 @@ main
 .aqi-display
 {
     border-left: 0.5rem solid;
+    min-width: 200px;
 }
 
 .aqi-display *
